#7: Make sure the marker displays on mobile too

--- a/wp-content/plugins/rnf-overrides/css/rnf-env-marker.css
+++ b/wp-content/plugins/rnf-overrides/css/rnf-env-marker.css
@@ -6,8 +6,21 @@
   text-transform: uppercase;
   color: white !important; /* Also override the hover state since this is not a link */
 }
+
 #wpadminbar #wp-admin-bar-rnf-env-marker:hover div {
   background: transparent !important;
+}
+
+@media screen and (max-width: 782px) {
+  #wpadminbar #wp-admin-bar-rnf-env-marker {
+    display: block;
+    float: right;
+  }
+
+  #wpadminbar #wp-admin-bar-rnf-env-marker div {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
 }
 
 #wp-admin-bar-rnf-env-marker.rnf-env-prod {
